--- a/index.html
+++ b/index.html
@@ -7,34 +7,145 @@
     <script src="https://kit.fontawesome.com/5c6295b4cc.js" crossorigin="anonymous"></script><script src="https://kit.fontawesome.com/5c6295b4cc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/style.css">
     <title>Francisco Cervantes</title>
+    <style type="text/css">
+        @font-face {
+            font-family: 'Engadget';
+            src: url('Engadget.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+        }
+    </style>
 </head>
 <body>
+    <div id = "left_border"></div>
+    <div id = "left_numbers">
+        <p class="number">1</p>
+        <p class="number">2</p>
+        <p class="number">3</p>
+        <p class="number">4</p>
+        <p class="number">5</p>
+        <p class="number">6</p>
+        <p class="number">7</p>
+        <p class="number">8</p>
+        <p class="number">9</p>
+        <p class="number">10</p>
+        <p class="number">11</p>
+        <p class="number">12</p>
+        <p class="number">13</p>
+        <p class="number">14</p>
+        <p class="number">15</p>
+        <p class="number">16</p>
+        <p class="number">17</p>
+        <p class="number">18</p>
+        <p class="number">19</p>
+        <p class="number">20</p>
+        <p class="number">21</p>
+        <p class="number">22</p>
+        <p class="number">23</p>
+        <p class="number">24</p>
+        <p class="number">25</p>
+        <p class="number">26</p>
+        <p class="number">27</p>
+        <p class="number">28</p>
+        <p class="number">29</p>
+        <p class="number">30</p>
+        <p class="number">31</p>
+        <p class="number">32</p>
+        <p class="number">33</p>
+        <p class="number">34</p>
+        <p class="number">35</p>
+        <p class="number">36</p>
+        <p class="number">37</p>
+        <p class="number">38</p>
+        <p class="number">39</p>
+        <p class="number">40</p>
+        <p class="number">41</p>
+        <p class="number">42</p>
+        <p class="number">43</p>
+        <p class="number">44</p>
+        <p class="number">45</p>
+        <p class="number">46</p>
+        <p class="number">47</p>
+        <p class="number">48</p>
+        <p class="number">49</p>
+        <p class="number">50</p>
+        <p class="number">51</p>
+        <p class="number">52</p>
+        <p class="number">53</p>
+        <p class="number">54</p>
+        <p class="number">55</p>
+        <p class="number">56</p>
+        <p class="number">57</p>
+        <p class="number">58</p>
+        <p class="number">59</p>
+        <p class="number">60</p>
+        <p class="number">61</p>
+        <p class="number">62</p>
+        <p class="number">63</p>
+        <p class="number">64</p>
+        <p class="number">65</p>
+        <p class="number">66</p>
+        <p class="number">67</p>
+        <p class="number">68</p>
+        <p class="number">69</p>
+        <p class="number">70</p>
+        <p class="number">71</p>
+        <p class="number">72</p>
+        <p class="number">73</p>
+        <p class="number">74</p>
+        <p class="number">75</p>
+        <p class="number">76</p>
+        <p class="number">77</p>
+        <p class="number">78</p>
+        <p class="number">79</p>
+        <p class="number">80</p>
+        <p class="number">81</p>
+        <p class="number">82</p>
+        <p class="number">83</p>
+        <p class="number">84</p>
+        <p class="number">85</p>
+        <p class="number">86</p>
+        <p class="number">87</p>
+        <p class="number">88</p>
+        <p class="number">89</p>
+        <p class="number">90</p>
+        <p class="number">91</p>
+        <p class="number">92</p>
+        <p class="number">93</p>
+        <p class="number">94</p>
+        <p class="number">95</p>
+        <p class="number">96</p>
+    </div>
     <div class="nav">
         <ul class="nav_list">
-            <li class="nav_el" onclick="location.href='#Hero'"><i class="fa-solid fa-hand"></i></li>
-            <li class="nav_el" onclick="location.href='#Python'"><i class="fa-brands fa-python"></i></li>
-            <li class="nav_el" onclick="location.href='#Analyst'"><i class="fa-solid fa-chart-simple"></i></li>
-            <li class="nav_el" onclick="location.href='#ML'"><i class="fa-solid fa-brain"></i></li>
-            <li class="nav_el" onclick="location.href='#Engineer'"><i class="fa-solid fa-gear"></i></li>
-            <li class="nav_el" onclick="location.href='#Contact'"><i class="fa-solid fa-envelope"></i></li>
+            <li class="nav_el" onclick="location.href='#Hero'">Hi</li>
+            <li class="nav_el" onclick="location.href='#About'">About</li>
+            <li class="nav_el" onclick="location.href='#Portfolio'">Portfolio</li>
+            <li class="nav_el" onclick="location.href='#Contact'">Contact</li>
         </ul>
     </div>
     <div class="section" id="Hero">
-        <div class="name_desc">
-            <h1 class="name">Francisco Cervantes Rdz</h1>
-            <hr>
+        <div class="hero_left">
+            <div class="desc">
+                <h1 class="name">Francisco Cervantes</h1>
+                <p class="role">* Data Engineer</p>
+                <p class="role">* Python Developer</p>
+                <p class="role">* Teacher</p>
+            </div>
+            <div class="direct_access">
+                <p class="direct_access">Direct Access</p>
+                <ul class="direct_access">
+                    <li class="direct_access"><img src="imgs/icon_linkedin.png" alt="icon_linkedin" class="direct_access" onclick="window.open('https://www.linkedin.com/in/fcocervantesrdz/','_blank')"></li>
+                    <li class="direct_access"><img src="imgs/icon_github.png" alt="icon_github" class="direct_access" onclick="window.open('https://github.com/FcoCervantesRdz','_blank')"></li>
+                    <li class="direct_access"><img src="imgs/icon_whatsapp.png" alt="icon_whatsapp" class="direct_access" onclick="window.open('https://wa.me/528127592118','_blank')"></li>
+                    <li class="direct_access"><img src="imgs/icon_mail.png" alt="icon_mail" class="direct_access" onclick="window.open('mailto:fco.cervantesrdz@gmail.com','_blank')"></li>
+                </ul>
+            </div>
         </div>
-        <div class="hero_imgs">
-            <div class="hero_img" id="h_py"><img class="h_svg" id="py_svg" src="./imgs/img_1.svg" alt="img1"></div>
-            <div class="hero_img" id="h_an"><img class="h_svg" id="an_svg" src="./imgs/img_2.svg" alt="img2"></div>
-            <div class="hero_img" id="h_ml"><img class="h_svg" id="ml_svg" src="./imgs/img_3.svg" alt="img3"></div>
-            <div class="hero_img" id="h_en"><img class="h_svg" id="en_svg" src="./imgs/img_4.svg" alt="img4"></div>
+        <div class="hero_right">
+            <img id="me" src="imgs/me.png" alt="me">
         </div>
     </div>
-    <div class="section" id="Python"></div>
-    <div class="section" id="Analyst"></div>
-    <div class="section" id="ML"></div>
-    <div class="section" id="Engineer"></div>
+    <div class="section" id="About"></div>
+    <div class="section" id="Portfolio"></div>
     <div class="section" id="Contact"></div>
 </body>
 </html>
