about page made

--- a/index.html
+++ b/index.html
@@ -144,7 +144,63 @@
             <img id="me" src="imgs/me.png" alt="me">
         </div>
     </div>
-    <div class="section" id="About"></div>
+    <div class="section" id="About">
+        <div style="height: 7.4vh;"></div>
+        <div>
+            <h2 class="blue_header">About</h2>
+            <p>Data engineer passionate about teaching and constant learning. With computer systems bachelor and mathematics, currently a data engineer, I managed to develop and stand out for my passion at work and my perseverance optimizing processes.</p>
+        </div>
+        <div>
+            <h2 class="blue_header">Technologies</h2>
+            <div class="container_box">
+                <div class="box">
+                    <img src="imgs/tech_python.png" alt="tech_python">
+                    <h3 class="skill">Python</h3>
+                </div>
+                <div class="box">
+                    <img src="imgs/tech_sql.png" alt="tech_sql">
+                    <h3 class="skill">SQL</h3>
+                </div>
+                <div class="box">
+                    <img src="imgs/tech_ssis.png" alt="tech_ssis">
+                    <h3 class="skill">SSIS / SSRS</h3>
+                </div>
+                <div class="box">
+                    <img src="imgs/tech_git.png" alt="tech_git">
+                    <h3 class="skill">Git / Github</h3>
+                </div>
+                <div class="box">
+                    <img src="imgs/tech_html.png" alt="tech_html">
+                    <h3 class="skill">HTML / CSS</h3>
+                </div>
+            </div>
+        </div>
+        <div>
+            <h2 class="blue_header">Skills</h2>
+            <div class="container_box">
+                <div class="box">
+                    <img src="imgs/skill_elt.png" alt="skill_elt">
+                    <h3 class="skill">ELT</h3>
+                </div>
+                <div class="box">
+                    <img src="imgs/skill_analysis.png" alt="skill_analysis">
+                    <h3 class="skill">Analysis</h3>
+                </div>
+                <div class="box">
+                    <img src="imgs/skill_ml.png" alt="skill_ml">
+                    <h3 class="skill">Machine Learning</h3>
+                </div>
+                <div class="box">
+                    <img src="imgs/skill_webscrap.png" alt="skill_webscrap">
+                    <h3 class="skill">Web Scrapping</h3>
+                </div>
+                <div class="box">
+                    <img src="imgs/skill_vision.png" alt="skill_vision">
+                    <h3 class="skill">Computer Vision</h3>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="section" id="Portfolio"></div>
     <div class="section" id="Contact"></div>
 </body>
